# AetherPak

./: .gitignore  README.md  build.gradle.kts  keystore.properties.example  settings.gradle.kts
.github/workflows/: android-build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/zorg/aetherpak/: AetherApp.kt  MainActivity.kt  ServiceLocator.kt
app/src/main/java/com/zorg/aetherpak/ui/: ViewModelFactory.kt
app/src/main/java/com/zorg/aetherpak/ui/components/: Components.kt
app/src/main/java/com/zorg/aetherpak/ui/navigation/: AetherNavHost.kt  Screen.kt
app/src/main/java/com/zorg/aetherpak/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
core/access/: build.gradle.kts
core/access/src/main/: AndroidManifest.xml
core/access/src/main/aidl/com/zorg/aetherpak/access/: IUserService.aidl
core/access/src/main/java/com/zorg/aetherpak/access/: AccessManager.kt  RootAccessProvider.kt  ShizukuAccessProvider.kt  StatParsing.kt  (+1 more)
core/backup/: build.gradle.kts
core/backup/src/main/: AndroidManifest.xml
core/common/: build.gradle.kts
core/compress/: README.md  build.gradle.kts  consumer-rules.pro
core/compress/src/main/jniLibs/: .gitkeep
core/data/: build.gradle.kts
core/restore/: build.gradle.kts
core/restore/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
rust/aetherpak-core/: Cargo.toml
rust/aetherpak-core/.cargo/: config.toml
rust/aetherpak-core/src/: archive_reader.rs  archive_writer.rs  codec.rs  jni_bridge.rs  lib.rs
(+33 files in other folders)
