[package]
name = "aetherpak-core"
version = "0.1.0"
edition = "2021"
description = "AetherPak native streaming archive core (zstd/zip/7z) over JNI."
license = "Apache-2.0"

[lib]
name = "aetherpak"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
zstd = "0.13"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"
tar = "0.4"
thiserror = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
